crates/nexus-store/tests/compile_fail/persisted_envelope_lifetime_escape.stderr
error[E0597]: `payload` does not live long enough
  --> tests/compile_fail/persisted_envelope_lifetime_escape.rs:13:13
   |
 6 |     let envelope = {
   |         -------- borrow later stored here
 7 |         let payload = vec![1, 2, 3];
   |             ------- binding `payload` declared here
...
13 |             &payload,
   |             ^^^^^^^^ borrowed value does not live long enough
...
16 |     };
   |     - `payload` dropped here while still borrowed
